--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,8 @@ figure.effect-oscar:hover figcaption {
 
 figure.effect-oscar:hover img {
 	opacity: 0.4;
+	max-width: 100%;
+	display: block;
 }
 
 /* Styles
@@ -397,6 +399,8 @@ p {
     position: absolute;
     right: 0px;
     bottom: 0px;
+    max-width: 100%;
+    display: block;
 }
 
 .top_left_cont {
@@ -686,12 +690,16 @@ a.contact_btn:hover {
 }
 
 .Portfolio-box img {
+    max-width: 100%;
+    display: block;
     transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
 }
 
 .Portfolio-box img:hover {
+	max-width: 100%;
+	display:block;
     opacity: 0.6;
 }
 
@@ -703,6 +711,7 @@ a.contact_btn:hover {
 
 img {
     max-width: 100%;
+	display:block;
 }
 
 /* no transition on .isotope container */
@@ -765,6 +774,8 @@ img {
 }
 
 .client_profile_pic img {
+	max-width: 100%;
+	display: block;
     border-radius: 50%;
     border: 3px solid #f5f5f5;
 }
@@ -943,6 +954,8 @@ background-position-y: 70px;
 }
 
 .team_box img {
+	max-width: 100%;
+	display: block;
     display: block;
     border-radius: 0%;
     width: 90%;
@@ -1005,6 +1018,7 @@ margin-bottom: 5px;
     color: #dd4b39;
 }
  .img-circle {
+	 max-width:100%;
 border-radius: 50%;
 }
 .centered {
@@ -1476,12 +1490,14 @@ border: 1px solid #CE1139;
 }
 
 .portfolio-item .portfolio_img {
+	max-width:100%;
     overflow: hidden;
     display: block;
     position: relative;
 }
 
 .portfolio-item .portfolio_img img {
+	max-width:100%;
     width: 100%;
     height: auto;
 }
@@ -1964,6 +1980,8 @@ margin: 0 0 9px 0;
 padding: 20px 0 20px;
 }
 #aboutUs img{
+	max-width:100%;
+	display:block;
 margin-bottom:20px;
 }
 #aboutUs h3{
@@ -2070,6 +2088,8 @@ text-align: left;
 margin-left: 10px;
 }
 img.img.img-circle.lt-box {
+	max-width: 100%;
+	display: block;
 float: left;
 width: 60px;
 height: auto;
