--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ background-position-y: 70px;
 	padding-left:0px;
 }
 .about-us p{
-	/*font-size: 0.9375em;*/
+	font-size: 0.9375em;
 	line-height: 1.625em;
 	padding: 15px 0;
 }
